maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    keepHandOnSideWAll()
  }
}

def keepHandOnSideWall() {
  gauche()
  if (!estFaceMur()) {
    avance()
  }
  else {
    droite()
    if (!estFaceMur()) {
      avance()
    }
    else {
      droite()
      if (!estFaceMur()) {
        avance()
      }
      else {
        droite()
        if (!estFaceMur()) {
          avance()
        }
        
      }
    }
  }
}